2003-12-31  Arjan Molenaar  <arjanmolenaar@hetnet.nl>

	* gaphor/UML/umllex.py: Added parser and renderer for association
	ends.
	* gaphor/diagram/association.py: use the association end parser.

2003-12-05  Arjan Molenaar  <arjanmolenaar@hetnet.nl>

	* gaphor/storage.py: Store data in new format (see doc/xml-format.txt)
	* gaphor/parser.py: New data is parsed. utils/genUML2.py and
	gaphor/UML/element.py should be altered.

2003-11-26  Arjan Molenaar  <arjanmolenaar@hetnet.nl>

	* gaphor/UML/umllex.py: fixed some stuff.

2003-11-24  Arjan Molenaar  <arjanmolenaar@hetnet.nl>

	* gaphor/ui/consolewindow.py: new file. Adds a GtkInterpreterConsole
	to gaphor.
	* gaphor/ui/command/mainpy, data/gaphor-main-ui.xml: added entry
	for console.

2003-11-03  Arjan Molenaar  <arjanmolenaar@hetnet.nl>

	* gaphor/__init__.py: remove class Gaphor, instead just defined some
	modules. the function resource(r) works also for version, name, etc.
	* gaphor/diagram/klass.py: fixes and cleanup for attribute/operation
	add/remove functionality.

2003-09-25  Arjan Molenaar  <arjanmolenaar@hetnet.nl>

	* setup.py: Changed. the datadir is now added to gaphor/version.py.
	* gaphor/__init__.py: changed to use new data_dir location.

2003-09-20  Arjan Molenaar  <arjanmolenaar@hetnet.nl>

	* gaphor/diagram/association.py: made multiplicity work again.
	* setup.py: bumped version to 0.3.0

2003-09-01  Arjan Molenaar  <arjanmolenaar@hetnet.nl>

	* doc/UML2.gaphor: UML model is now based on new data model
	* gaphor/diagram/association.py: make it work
	* Loads of work to get the conversion done.

2003-08-19  Arjan Molenaar  <arjanmolenaar@hetnet.nl>

	* gaphor/diagram/operation.py, gaphor/diagram/attribute.py: new files
	* gaphor/diagram/klass.py: works with new data model
	* gaphor/diagram/association.py: works with new data model (kinda)
	* Several changes...

2003-06-03  Arjan Molenaar  <arjanmolenaar@hetnet.nl>
	
	* setup.py: first do a pygtk.require() before config_Gaphor.
